--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">MobileOrderSystem</string>
+    <string name="eqTitle">Equipment</string>
+    <string name="ordersTitle">Orders</string>
+    <string name="add">Add</string>
+    <string name="list">List</string>
 </resources>
