--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">MobilnySystemZamówień</string>
-    <string name="eqTitle" translatable="false">Sprzęt</string>
-    <string name="ordersTitle">Zamówienia</string>
+    <string name="title_equipment">Sprzęt</string>
+    <string name="title_order">Zamówienia</string>
     <string name="list">Lista</string>
     <string name="add">Dodaj</string>
+    <string name="action_sign_in">Zaloguj lub zarejestruj</string>
+    <string name="action_sign_in_short">Zaloguj</string>
+    <string name="invalid_password">Hasło musi zawierać >5 znaków</string>
+    <string name="invalid_username">Niepoprawna nazwa użytkownika</string>
+    <string name="login_failed">Logowanie nie powiodło się</string>
+    <string name="prompt_password">Hasło</string>
+    <string name="welcome">Witaj!</string>
+    <string name="title_home">Główna</string>
+    <string name="title_customer">Klienci</string>
 </resources>
