--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
-    <string name="app_name">MobileOrderSystem</string>
-    <string name="eqTitle">Equipment</string>
-    <string name="ordersTitle">Orders</string>
+    <string name="app_name" translatable="false">MobileOrderSystem</string>
+    <string name="title_equipment">Equipment</string>
+    <string name="title_order">Orders</string>
     <string name="add">Add</string>
     <string name="list">List</string>
-    <string name="title_activity_login">Sign in</string>
-    <string name="prompt_email">Email</string>
+    <string name="title_activity_login" translatable="false">Sign in</string>
+    <string name="prompt_email" translatable="false">Email</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
@@ -13,4 +13,7 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+    <string name="title_home">Home</string>
+    <string name="title_customer">Customers</string>
+
 </resources>
