--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,10 @@
     <string name="title_home">Home</string>
     <string name="title_customer">Customers</string>
 
+    <string name="email" translatable="false">Email</string>
+    <string name="password">Password</string>
+    <string name="repeat_password">Repeat password</string>
+    <string name="create_account">Create account</string>
+
+
 </resources>
