--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,13 @@
     <string name="password">Password</string>
     <string name="repeat_password">Repeat password</string>
     <string name="create_account">Create account</string>
+    <string name="drawer_open">Open</string>
+    <string name="drawer_close">Close</string>
+    <string name="reset_password">Change Password</string>
+    <string name="logout">Logout</string>
+    <string name="delete_account">Delete Account</string>
+    <string name="settings">Account Settings</string>
+    <string name="alertDelete">Your account will be deleted. Are you sure you want to continue?</string>
 
 
 </resources>
