Changed back handling. Now highlighted is chanched to the right one when you go back and you can visit each fragment except home just once when you're going back.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,11 +15,8 @@
     <string name="login_failed">"Login failed"</string>
     <string name="title_home">Home</string>
     <string name="title_customer">Customers</string>
-
-    <string name="email" translatable="false">Email</string>
+    <string name="create_account">Create Account</string>
     <string name="password">Password</string>
     <string name="repeat_password">Repeat password</string>
-    <string name="create_account">Create account</string>
-
 
 </resources>
