--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -40,6 +40,8 @@
     <string name="enter_name">Wpisz nazwe tutaj</string>
     <string name="enter_amount">Wpisz ilość tutaj</string>
     <string name="enter_price">Wpisz cene/dzien tutaj</string>
+    <string name="label_activeOrders">Aktywne zamówienia</string>
+    <string name="label_recent_orders">Ostatnie zamówienia</string>
 
 
 </resources>
