--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="passwordChangeSucces">Password change has been successful</string>
     <string name="passwordChangeFail">There was an error while changing the password</string>
     <string name="name">Name</string>
-    <string name="forgotPassword">Forgot password</string>
+    <string name="forgotPassword">Forgot password?</string>
     <string name="signIn">Sing in</string>
     <string name="signUp">Sign up</string>
     <string name="checkEmailTitle">Check your email account! </string>
@@ -53,6 +53,8 @@
     <string name="enter_price">Enter the price/day here</string>
     <string name="label_activeOrders">Active Orders</string>
     <string name="label_recent_orders">Recent Orders</string>
+    <string name="email_hint_text" translatable="false">E-mail</string>
+    <string name="password_hint_text">Password</string>
 
 
 </resources>
