--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,4 +77,5 @@
     <string name="add_eq_fab_label">Add equipment</string>
     <string name="add_customer_fab_label">Add customer</string>
     <string name="add_order_fab_label">Add order</string>
+    <string name="night_mode_switch_label">Night mode</string>
 </resources>
