--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -45,12 +45,15 @@
     <string name="item_name">Nazwa przedmiotu</string>
     <string name="amount">Ilość</string>
     <string name="price_day">Cena/dzień</string>
-    <string name="enter_name">Wpisz nazwe tutaj</string>
-    <string name="enter_amount">Wpisz ilość tutaj</string>
-    <string name="enter_price">Wpisz cene/dzien tutaj</string>
+    <string name="enter_name">Nazwa</string>
+    <string name="enter_amount">Ilość</string>
+    <string name="enter_price">Cena/dzień</string>
     <string name="label_activeOrders">Aktywne zamówienia</string>
     <string name="label_recent_orders">Ostatnie zamówienia</string>
     <string name="password_hint_text">Hasło</string>
+    <string name="name_hint_text">Imie i nazwisko</string>
+    <string name="label_equipment">Sprzęt</string>
+
 
 
 </resources>
