--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,5 +109,8 @@
     <string name="add_order_fab_label">Add order</string>
     <string name="night_mode_switch_label">Night mode</string>
 
-
+    <string name="delete">Delete</string>
+    <string name="confirm">Are you sure you want to continue?</string>
+    <string name="customer_with_order">Customer has at least one order</string>
+    <string name="eq_with_order">Equipment is in at least one order</string>
 </resources>
